# batsignal

./: .gitignore  CMakeLists.txt  README.md  build-plugin.sh  enable-bluez-experimental.sh  install.sh  restart-plasma.sh  test-plugin.qml
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: BluetoothBattery.qml  ConfigGeneral.qml  main.qml
plugin/: CMakeLists.txt  Makefile  batsignalplugin.pro  moc_bluetoothmanager.cpp  plugin.moc  qmldir
plugin/src/: bluetoothmanager.cpp  bluetoothmanager.h  plugin.cpp
